--- a/booking.html
+++ b/booking.html
@@ -1,19 +1,36 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Virtual Nomad - Welcome to Seamless Relocation</title>
-  <meta name="description" content="Relocate to Cape Town effortlessly with our expert relocation services tailored for digital nomads and remote workers.">
-  <meta name="keywords" content="relocation services, Cape Town, digital nomads">
+  <meta name="description" content="Relocate to Cape Town effortlessly with our expert relocation services tailored for digital nomads and remote workers. Virtual tours, legal support, and cultural orientation all in one place.">
+  <meta name="keywords" content="relocation services, Cape Town, digital nomads, virtual tours, legal support, cultural orientation">
+  <link rel="canonical" href="https://www.virtualnomad.co.za/">
 
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXX-Y');
+  </script>
+
+  <!-- CSS and Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../src/styles.css">
 
+  <!-- JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+  <script>
+    emailjs.init("bDD9Bs-d_KntBXRt_");
+  </script>
 
   <style>
     .logo {
@@ -25,109 +42,109 @@
 
 <body>
 
-<!-- NAV -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="logo.png" class="logo me-2">
-      <span class="fw-bold">Virtual Nomad</span>
-    </a>
-  </div>
-</nav>
-
-<!-- BOOKING -->
-<div id="booking-section" class="container mt-5">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Book Your Service</h5>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="#home">
+        <img src="logo.png" alt="Virtual Nomad Logo" class="logo me-2">
+        <span class="fw-bold text-uppercase">Virtual Nomad</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html#home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#About Us">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Contact</a></li>
+        </ul>
       </div>
+    </div>
+  </nav>
 
-      <div class="modal-body">
-        <!-- FORM SPREE WORKING FORM -->
-        <form id="bookingForm" action="https://formspree.io/f/xanqyggv" method="POST">
+  <div id="booking-section" class="container mt-5">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Book Your Service</h5>
+        </div>
+        <div class="modal-body">
 
+          <form id="bookingForm" action="https://formspree.io/f/xanqyggv" method="POST">
+            <div class="mb-3">
+              <label for="fullName" class="form-label">Full Name</label>
+              <input type="text" class="form-control" name="fullName" id="fullName" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" name="email" id="email" required>
+            </div>
+            <div class="mb-3">
+              <label for="servicePackage" class="form-label">Select Package</label>
+              <select class="form-control" name="servicePackage" id="servicePackage" required>
+                <option value="">-- Select a Package --</option>
+                <option value="Basic"> - Basic</option>
+                <option value="Standard"> - Standard</option>
+                <option value="Premium"> - Premium</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="addons" class="form-label">Add-Ons</label>
+              <select multiple class="form-control" name="addons[]" id="addons">
+                <option value="Extra Local Experiences">Extra Local Experiences - $100</option>
+                <option value="Monthly Support Subscription">Monthly Support Subscription - $50</option>
+                <option value="Personal Concierge">Personal Concierge - $150</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="customRequest" class="form-label">Custom Request (Optional)</label>
+              <textarea class="form-control" name="customRequest" id="customRequest" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Submit Booking</button>
+          </form>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact Section -->
+  <section id="contact" class="container mt-5">
+    <h2 class="text-center mb-4">Contact Us</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <form id="contact-form">
           <div class="mb-3">
-            <label class="form-label">Full Name</label>
-            <input type="text" class="form-control" name="fullName" required>
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" name="name" required>
           </div>
-
           <div class="mb-3">
-            <label class="form-label">Email</label>
-            <input type="email" class="form-control" name="email" required>
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
           </div>
-
           <div class="mb-3">
-            <label class="form-label">Select Package</label>
-            <select class="form-control" name="servicePackage" required>
-              <option value="">-- Select --</option>
-              <option value="Basic">$250 - Basic</option>
-              <option value="Standard">$500 - Standard</option>
-              <option value="Premium">$800 - Premium</option>
-            </select>
+            <label for="message" class="form-label">Message</label>
+            <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
           </div>
-
-          <div class="mb-3">
-            <label class="form-label">Add-Ons</label>
-            <select multiple class="form-control" name="addons[]">
-              <option value="Extra Local Experiences">Extra Local Experiences</option>
-              <option value="Monthly Support Subscription">Monthly Support Subscription</option>
-              <option value="Personal Concierge">Personal Concierge</option>
-            </select>
-          </div>
-
-          <div class="mb-3">
-            <label class="form-label">Custom Request</label>
-            <textarea class="form-control" name="customRequest"></textarea>
-          </div>
-
-          <button type="submit" class="btn btn-primary w-100">Submit Booking</button>
-
+          <button type="submit" class="btn btn-primary w-100">Send Message</button>
         </form>
       </div>
     </div>
-  </div>
-</div>
+  </section>
 
-<!-- CONTACT -->
-<section id="contact" class="container mt-5">
-  <h2 class="text-center mb-4">Contact Us</h2>
-
-  <form id="contact-form">
-    <div class="mb-3">
-      <label class="form-label">Name</label>
-      <input type="text" class="form-control" name="name" required>
-    </div>
-
-    <div class="mb-3">
-      <label class="form-label">Email</label>
-      <input type="email" class="form-control" name="email" required>
-    </div>
-
-    <div class="mb-3">
-      <label class="form-label">Message</label>
-      <textarea class="form-control" name="message" required></textarea>
-    </div>
-
-    <button type="submit" class="btn btn-primary w-100">Send Message</button>
-  </form>
-</section>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../crs/scripts.js"></script>
 
 <script>
-  emailjs.init("pLWCkusN34A8Sb8S9");
-
-  document.getElementById("contact-form").addEventListener("submit", function (e) {
-    e.preventDefault();
+  document.getElementById("contact-form").addEventListener("submit", function(event) {
+    event.preventDefault();
 
     emailjs.sendForm("service_ejvwqzl", "template_c96yqan", this)
-      .then(() => {
+      .then(function () {
         alert("Message Sent Successfully!");
-        this.reset();
-      })
-      .catch(err => {
-        alert("Email failed: " + err.text);
+      }, function (error) {
+        alert("Failed to send message. Try again! Error: " + JSON.stringify(error));
       });
   });
 </script>
