--- a/airport-transfers.html
+++ b/airport-transfers.html
@@ -8,7 +8,91 @@
 
   <meta name="description" content="Reliable airport transfers, private pickups, and guided city tours in Cape Town. Ideal for visitors, property viewings, and people relocating to Cape Town.">
   <meta name="keywords" content="Cape Town airport transfers, city tours Cape Town, airport pickup Cape Town, relocation services Cape Town, private transfers Cape Town">
+
   <link rel="canonical" href="https://www.virtualnomad.co.za/airport-transfers.html">
+
+  <!-- GEO / LOCAL SEO -->
+  <meta name="geo.region" content="ZA-WC">
+  <meta name="geo.placename" content="Cape Town">
+  <meta name="geo.position" content="-33.9696;18.5973">
+  <meta name="ICBM" content="-33.9696, 18.5973">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+  <!-- Performance -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="dns-prefetch" href="https://media.istockphoto.com">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Airport Transfers & City Tours in Cape Town | Virtual Nomad">
+  <meta property="og:description" content="Private airport transfers and guided city tours in Cape Town for visitors and relocating professionals.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.virtualnomad.co.za/airport-transfers.html">
+  <meta property="og:image" content="https://www.virtualnomad.co.za/airport-transfers-city-tours-cape-town.jpg">
+
+  <!-- Local Business + Service Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "name": "Airport Transfers & City Tours in Cape Town",
+    "serviceType": "Airport Transfers and Guided City Tours",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "Virtual Nomad Cape Town",
+      "url": "https://www.virtualnomad.co.za/",
+      "telephone": "+27 84 729 0664"
+    },
+    "areaServed": {
+      "@type": "City",
+      "name": "Cape Town"
+    },
+    "availableChannel": {
+      "@type": "ServiceChannel",
+      "serviceLocation": {
+        "@type": "Place",
+        "name": "Cape Town International Airport"
+      }
+    },
+    "description": "Reliable airport transfers, private pickups, property viewing transport and guided city tours in Cape Town."
+  }
+  </script>
+
+  <!-- FAQ Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Do you provide airport transfers from Cape Town International Airport?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, we offer private and reliable airport transfers from Cape Town International Airport to destinations across the city."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I book city tours in Cape Town?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, we provide guided city tours covering major attractions, neighbourhoods, and lifestyle areas in Cape Town."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you offer transport for property viewings?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, we offer dedicated transport services for property viewings across Cape Town."
+        }
+      }
+    ]
+  }
+  </script>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
