Update service package and add-ons options

--- a/booking.html
+++ b/booking.html
@@ -85,17 +85,17 @@
               <label for="servicePackage" class="form-label">Select Package</label>
               <select class="form-control" name="servicePackage" id="servicePackage" required>
                 <option value="">-- Select a Package --</option>
-                <option value="Basic"> - Basic</option>
-                <option value="Standard"> - Standard</option>
-                <option value="Premium"> - Premium</option>
+                <option value="Basic"> Virtual Property Tours</option>
+                <option value="Standard"> Airport Transfers & City Tours</option>
+                <option value="Premium"> Cultural Orientation</option>
               </select>
             </div>
             <div class="mb-3">
               <label for="addons" class="form-label">Add-Ons</label>
               <select multiple class="form-control" name="addons[]" id="addons">
-                <option value="Extra Local Experiences">Extra Local Experiences - $100</option>
-                <option value="Monthly Support Subscription">Monthly Support Subscription - $50</option>
-                <option value="Personal Concierge">Personal Concierge - $150</option>
+                <option value="Extra Local Experiences">Extra Local Experiences </option>
+                <option value="Monthly Support Subscription">Monthly Support Subscription </option>
+                <option value="Personal Concierge">Personal Concierge </option>
               </select>
             </div>
             <div class="mb-3">
